[project]
name = "anp-agent-opensdk"
version = "0.1.0"
description = "anp_open_sdk is a middleware built on the ANP Agent Connect kernel protocol, designed to help developers seamlessly integrate ANP capabilities into their applications and agents"
authors = [
    {name = "seanzhang9999",email = "seanzhang9999@gmail.com"}
]
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = ">=3.10"


[tool.poetry]
packages = [
    { include = "anp_open_sdk" },
    { include = "utils" }
]

[tool.poetry.dependencies]
pyyaml = "^6.0.2"
python = ">=3.10,<4.0"
fastapi = "^0.103.0"
uvicorn = "^0.32.0"
python-dotenv = "^1.0.0"
pyjwt = "^2.8.0"
agent-connect = "^0.3.5"
python-multipart = "^0.0.6"
aiohttp = "^3.8.5"
cryptography = "^43.0.3"
canonicaljson = "^2.0.0"
pydantic = "^2.3.0"
pydantic-settings = "^2.0.0"
httpx = "^0.28.1"
mcp = {extras = ["cli"], version = ">=1.6.0"}
openai = "^1.77.0"
jinja2 = "^3.1.6"
loguru = "^0.7.3"
pycryptodome = "^3.22.0"
aiofiles = "^24.1.0"
colorama = "^0.4.6"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
